--- a/config.json
+++ b/config.json
@@ -2,8 +2,9 @@
 masterVolume=1.0
 musicVolume=0.8
 sfxVolume=0.8
-keyMoveUp=Q
+keyMoveUp=W
 keyMoveDown=S
 keyMoveLeft=A
 keyMoveRight=D
 keyShoot=SPACE
+debugEnabled=false
